--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NLW Copa</title>
 </head>
 <body>
-    
+    <div id="app">
+        <header>
+            <img src="./assets/logo.svg" alt="Logo da NLW Copa">
+        </header>
+
+        <main id="cards">
+            <div class="card">
+                <h2>24/11 <span>Quinta</span></h2>
+
+                <ul>
+                    <li>
+                        <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil">
+                        <strong>07:00</strong>
+                        <img src="./assets/icon-serbia.svg" alt="Bandeira da Sérvia">
+                    </li>
+                </ul>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
