--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>NLW Copa</title>
 </head>
 <body>
@@ -14,12 +15,17 @@
 
         <main id="cards">
             <div class="card">
-                <h2>24/11 <span>Quinta</span></h2>
+                <h2>24/11 <span>QUINTA</span></h2>
 
                 <ul>
                     <li>
                         <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil">
-                        <strong>07:00</strong>
+                        <strong>16:00</strong>
+                        <img src="./assets/icon-serbia.svg" alt="Bandeira da Sérvia">
+                    </li>
+                    <li>
+                        <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil">
+                        <strong>16:00</strong>
                         <img src="./assets/icon-serbia.svg" alt="Bandeira da Sérvia">
                     </li>
                 </ul>
