--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>NLW Copa</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <header>
+            <img src="./assets/logo.svg" alt="Logo da NLW Copa">
+        </header>
+
+        <main id="cards"></main>
+    </div>
     <script src="./main.js"></script>
 </body>
 </html>
