--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>NLW Copa</title>
 </head>
-<body>
+<body class="green">
     <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="Logo da NLW Copa">
